Mon May 15 11:23:23 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* proc-events.c (init_syscall_table): Delete stray ``;''.
	* ui-out.c (ui_out_set_flags, ui_out_clear_flags): Return old
 	value.
	* mdebugread.c (START_PSYMTAB): Add paren to avoid x=x=x.

2000-05-12  Kevin Buettner  <kevinb@redhat.com>

	* dwarf2read.c (dwarf2_const_value_data): Fix typo in sign
	extension code.

Fri May 12 20:38:55 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* TODO: Mention weak symbol problem.  Mention UnixWare thread
 	problem.

Fri May 12 14:12:17 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* README: Update section on kernel debugging.

Fri May 12 19:13:15 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* mips-tdep.c (mips_get_saved_register): New function.  Handle
 	case of 32 ABI saving 32 bit registers on stack when target has 64
 	bit ISA.
	(mips_gdbarch_init): Update.

Fri May 12 14:46:52 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* mips-tdep.c (MIPS_EABI): Fix typo.  Test for MIPS_ABI_EABI64.

Thu May 11 21:52:55 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* configure.in (WERROR_CFLAGS): Check that GCC accepts a -W
 	options before using them. Report result.
	* configure: Regenerate.
	
2000-05-11  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>

	* coffread.c (coff_symtab_read): In the case of C_THUMBEXT |
 	C_THUMBEXTFUNC | C_EXT, sec will never ever be the index for
 	.rodata, because cs_to_section doesn't deal with .rodata. Fix test
 	accordingly.

Thu May 11 21:33:59 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* gdbarch.sh (gdbarch_dump): Print the value of GDB_MULTI_ARCH.
  	Always check that a macro is defined before printing it.
	* gdbarch.c: Re-generate.

Thu May 11 17:22:36 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* README: Update for GDB 5.0.

Thu May 11 13:24:52 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* mips-tdep.c (MIPS_DEFAULT_STACK_ARGSIZE): Fix typo.

	* config/mips/tm-irix5.h (GDB_MULTI_ARCH): Add